JBEHAVE-592 move FluentWebDriverPage from tutorial

--- a/web-selenium/pom.xml
+++ b/web-selenium/pom.xml
@@ -31,5 +31,11 @@
       <version>${selenium.version}</version>
       <optional>true</optional>
     </dependency>
+    <dependency>
+      <groupId>org.seleniumhq.selenium.fluent</groupId>
+      <artifactId>fluent-selenium</artifactId>
+      <version>1.0-beta-1</version>
+      <optional>true</optional>
+    </dependency>
   </dependencies>
 </project>
