--- a/examples/trader-runner-webdriver/pom.xml
+++ b/examples/trader-runner-webdriver/pom.xml
@@ -106,6 +106,7 @@
               <includes>
                 <include>**/*Stories.java</include>
               </includes>
+              <embedderClass>org.jbehave.web.examples.trader.webdriver.TraderWebStories$SameThreadEmbedder</embedderClass>
             </configuration>
             <goals>
               <goal>run-stories-as-embeddables</goal>
