--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
   </modules>
 
   <properties>
-    <jbehave.core.version>3.5-beta-3</jbehave.core.version>
+    <jbehave.core.version>3.5</jbehave.core.version>
     <jbehave.site.version>3.1.1</jbehave.site.version>
     <jbehave.webapp.name>jbehave-web-runner</jbehave.webapp.name>
     <jdk.version>1.5</jdk.version>
@@ -269,7 +269,7 @@
         <plugin>
           <groupId>org.codehaus.xsite</groupId>
           <artifactId>xsite-maven-plugin</artifactId>
-          <version>1.0</version>
+          <version>1.2</version>
         </plugin>
         <!--This plugin's configuration is used to store Eclipse m2e settings 
           only. It has no influence on the Maven build itself. -->
