--- a/web-selenium/pom.xml
+++ b/web-selenium/pom.xml
@@ -12,6 +12,8 @@
 
   <properties>
     <selenium.version>2.7.0</selenium.version>
+    <groovy.version>1.8.2</groovy.version>
+    <gmaven.version>1.3</gmaven.version>
   </properties>
 
   <dependencies>
@@ -29,8 +31,76 @@
     <dependency>
       <groupId>org.seleniumhq.selenium.fluent</groupId>
       <artifactId>fluent-selenium</artifactId>
-      <version>1.0-beta-1</version>
+      <version>1.0-beta-3</version>
       <optional>true</optional>
     </dependency>
+    <dependency>
+      <groupId>org.codehaus.groovy</groupId>
+      <artifactId>groovy-all</artifactId>
+      <version>1.8.0</version>
+      <optional>true</optional>
+    </dependency>
+    <dependency>
+      <groupId>com.github.tanob</groupId>
+      <artifactId>groobe</artifactId>
+      <version>1.1</version>
+      <exclusions>
+        <exclusion>
+          <groupId>org.hamcrest</groupId>
+          <artifactId>hamcrest-all</artifactId>
+        </exclusion>
+      </exclusions>
+      <optional>true</optional>
+    </dependency>
+    <dependency>
+      <groupId>org.codehaus.geb</groupId>
+        <artifactId>geb-core</artifactId>
+        <version>0.6.0</version>
+        <optional>true</optional>
+    </dependency>
   </dependencies>
+  <build>
+    <plugins>
+      <plugin>
+         <groupId>org.codehaus.gmaven</groupId>
+         <artifactId>gmaven-plugin</artifactId>
+         <version>${gmaven.version}</version>
+         <configuration>
+           <source>
+             project.addCompileSourceRoot("src/main/groovy")
+             project.addTestCompileSourceRoot("src/test/groovy")
+           </source>
+           <providerSelection>1.7</providerSelection>
+           </configuration>
+           <dependencies>
+             <dependency>
+               <groupId>org.codehaus.gmaven.runtime</groupId>
+               <artifactId>gmaven-runtime-1.7</artifactId>
+               <version>${gmaven.version}</version>
+               <exclusions>
+                 <exclusion>
+                   <groupId>org.codehaus.groovy</groupId>
+                   <artifactId>groovy-all</artifactId>
+                 </exclusion>
+               </exclusions>
+             </dependency>
+             <dependency>
+               <groupId>org.codehaus.groovy</groupId>
+               <artifactId>groovy-all</artifactId>
+               <version>${groovy.version}</version>
+             </dependency>
+           </dependencies>
+           <executions>
+             <execution>
+               <goals>
+                 <goal>generateStubs</goal>
+                 <goal>compile</goal>
+                 <goal>generateTestStubs</goal>
+                 <goal>testCompile</goal>
+               </goals>
+             </execution>
+           </executions>
+         </plugin>
+       </plugins>
+    </build>
 </project>
