--- a/web-selenium/pom.xml
+++ b/web-selenium/pom.xml
@@ -58,6 +58,12 @@
         <version>0.6.0</version>
         <optional>true</optional>
     </dependency>
+    <dependency>
+      <groupId>org.picocontainer</groupId>
+      <artifactId>picocontainer</artifactId>
+      <version>2.13.6</version>
+      <optional>true</optional>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
