--- a/web-selenium/pom.xml
+++ b/web-selenium/pom.xml
@@ -12,7 +12,7 @@
 
   <properties>
     <selenium.version>2.7.0</selenium.version>
-    <groovy.version>1.8.2</groovy.version>
+    <groovy.version>1.8.3</groovy.version>
     <gmaven.version>1.3</gmaven.version>
   </properties>
 
@@ -37,7 +37,7 @@
     <dependency>
       <groupId>org.codehaus.groovy</groupId>
       <artifactId>groovy-all</artifactId>
-      <version>1.8.0</version>
+      <version>${groovy.version}</version>
       <optional>true</optional>
     </dependency>
     <dependency>
