--- a/web-selenium/pom.xml
+++ b/web-selenium/pom.xml
@@ -11,7 +11,7 @@
   <description>Selenium and WebDriver API bindings for JBehave</description>
 
   <properties>
-    <selenium.version>2.7.0</selenium.version>
+    <selenium.version>2.11.0</selenium.version>
     <groovy.version>1.8.4</groovy.version>
     <gmaven.version>1.3</gmaven.version>
   </properties>
@@ -31,7 +31,7 @@
     <dependency>
       <groupId>org.seleniumhq.selenium.fluent</groupId>
       <artifactId>fluent-selenium</artifactId>
-      <version>1.0-beta-3</version>
+      <version>1.0-beta-4-SNAPSHOT</version>
       <optional>true</optional>
     </dependency>
     <dependency>
@@ -55,13 +55,13 @@
     <dependency>
       <groupId>org.codehaus.geb</groupId>
         <artifactId>geb-core</artifactId>
-        <version>0.6.0</version>
+        <version>0.6.1</version>
         <optional>true</optional>
     </dependency>
     <dependency>
       <groupId>org.picocontainer</groupId>
       <artifactId>picocontainer</artifactId>
-      <version>2.13.6</version>
+      <version>2.14.1</version>
       <optional>true</optional>
     </dependency>
   </dependencies>
