--- a/web-selenium/pom.xml
+++ b/web-selenium/pom.xml
@@ -31,7 +31,7 @@
     <dependency>
       <groupId>org.seleniumhq.selenium.fluent</groupId>
       <artifactId>fluent-selenium</artifactId>
-      <version>1.0-beta-4-SNAPSHOT</version>
+      <version>1.0-beta-4</version>
       <optional>true</optional>
     </dependency>
     <dependency>
