--- a/web-selenium/pom.xml
+++ b/web-selenium/pom.xml
@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.jbehave.web</groupId>
@@ -54,9 +55,9 @@
     </dependency>
     <dependency>
       <groupId>org.codehaus.geb</groupId>
-        <artifactId>geb-core</artifactId>
-        <version>0.6.1</version>
-        <optional>true</optional>
+      <artifactId>geb-core</artifactId>
+      <version>0.6.1</version>
+      <optional>true</optional>
     </dependency>
     <dependency>
       <groupId>org.picocontainer</groupId>
@@ -68,45 +69,78 @@
   <build>
     <plugins>
       <plugin>
-         <groupId>org.codehaus.gmaven</groupId>
-         <artifactId>gmaven-plugin</artifactId>
-         <version>${gmaven.version}</version>
-         <configuration>
-           <source>
-             project.addCompileSourceRoot("src/main/groovy")
-             project.addTestCompileSourceRoot("src/test/groovy")
-           </source>
-           <providerSelection>1.7</providerSelection>
-           </configuration>
-           <dependencies>
-             <dependency>
-               <groupId>org.codehaus.gmaven.runtime</groupId>
-               <artifactId>gmaven-runtime-1.7</artifactId>
-               <version>${gmaven.version}</version>
-               <exclusions>
-                 <exclusion>
-                   <groupId>org.codehaus.groovy</groupId>
-                   <artifactId>groovy-all</artifactId>
-                 </exclusion>
-               </exclusions>
-             </dependency>
-             <dependency>
-               <groupId>org.codehaus.groovy</groupId>
-               <artifactId>groovy-all</artifactId>
-               <version>${groovy.version}</version>
-             </dependency>
-           </dependencies>
-           <executions>
-             <execution>
-               <goals>
-                 <goal>generateStubs</goal>
-                 <goal>compile</goal>
-                 <goal>generateTestStubs</goal>
-                 <goal>testCompile</goal>
-               </goals>
-             </execution>
-           </executions>
-         </plugin>
-       </plugins>
-    </build>
+        <groupId>org.codehaus.gmaven</groupId>
+        <artifactId>gmaven-plugin</artifactId>
+        <version>${gmaven.version}</version>
+        <configuration>
+          <source>
+            project.addCompileSourceRoot("src/main/groovy")
+            project.addTestCompileSourceRoot("src/test/groovy")
+          </source>
+          <providerSelection>1.7</providerSelection>
+        </configuration>
+        <dependencies>
+          <dependency>
+            <groupId>org.codehaus.gmaven.runtime</groupId>
+            <artifactId>gmaven-runtime-1.7</artifactId>
+            <version>${gmaven.version}</version>
+            <exclusions>
+              <exclusion>
+                <groupId>org.codehaus.groovy</groupId>
+                <artifactId>groovy-all</artifactId>
+              </exclusion>
+            </exclusions>
+          </dependency>
+          <dependency>
+            <groupId>org.codehaus.groovy</groupId>
+            <artifactId>groovy-all</artifactId>
+            <version>${groovy.version}</version>
+          </dependency>
+        </dependencies>
+        <executions>
+          <execution>
+            <goals>
+              <goal>generateStubs</goal>
+              <goal>compile</goal>
+              <goal>generateTestStubs</goal>
+              <goal>testCompile</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+    </plugins>
+    <pluginManagement>
+      <plugins>
+        <!--This plugin's configuration is used to store Eclipse m2e settings 
+          only. It has no influence on the Maven build itself. -->
+        <plugin>
+          <groupId>org.eclipse.m2e</groupId>
+          <artifactId>lifecycle-mapping</artifactId>
+          <version>1.0.0</version>
+          <configuration>
+            <lifecycleMappingMetadata>
+              <pluginExecutions>
+                <pluginExecution>
+                  <pluginExecutionFilter>
+                    <groupId>org.codehaus.gmaven</groupId>
+                    <artifactId>gmaven-plugin</artifactId>
+                    <versionRange>[${gmaven.version}]</versionRange>
+                    <goals>
+                      <goal>generateStubs</goal>
+                      <goal>compile</goal>
+                      <goal>generateTestStubs</goal>
+                      <goal>testCompile</goal>
+                    </goals>
+                  </pluginExecutionFilter>
+                  <action>
+                    <ignore></ignore>
+                  </action>
+                </pluginExecution>
+              </pluginExecutions>
+            </lifecycleMappingMetadata>
+          </configuration>
+        </plugin>
+      </plugins>
+    </pluginManagement>
+  </build>
 </project>
