--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
   </modules>
 
   <properties>
-    <jbehave.core.version>3.6-SNAPSHOT</jbehave.core.version>
+    <jbehave.core.version>3.6-beta-2</jbehave.core.version>
     <jbehave.site.version>3.1.1</jbehave.site.version>
     <jbehave.webapp.name>jbehave-web-runner</jbehave.webapp.name>
     <jdk.version>1.5</jdk.version>
@@ -207,7 +207,7 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-release-plugin</artifactId>
-          <version>2.2.2</version>
+          <version>2.1</version>
           <configuration>
             <autoVersionSubmodules>true</autoVersionSubmodules>
             <preparationGoals>clean install</preparationGoals>
