[maven-release-plugin] prepare release jbehave-web-3.5-beta-1

--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.codehaus</groupId>
@@ -9,7 +8,7 @@
   </parent>
   <groupId>org.jbehave.web</groupId>
   <artifactId>jbehave-web</artifactId>
-  <version>3.5-SNAPSHOT</version>
+  <version>3.5-beta-1</version>
   <packaging>pom</packaging>
   <name>JBehave Web</name>
   <description>JBehave Web provides a web integration layer for Behaviour-Driven Development</description>
@@ -279,8 +278,7 @@
             </webAppConfig>
             <webApp>${project.build.directory}/${jbehave.webapp.name}.war</webApp>
             <connectors>
-              <connector
-                implementation="org.eclipse.jetty.server.nio.SelectChannelConnector">
+              <connector implementation="org.eclipse.jetty.server.nio.SelectChannelConnector">
                 <port>8080</port>
                 <maxIdleTime>60000</maxIdleTime>
               </connector>
