--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
     <jbehave.webapp.name>jbehave-web-runner</jbehave.webapp.name>
     <jdk.version>1.5</jdk.version>
     <jetty.version>7.2.2.v20101205</jetty.version>
+    <gmaven.version>1.3</gmaven.version>
   </properties>
 
   <dependencyManagement>
@@ -253,7 +254,7 @@
         <plugin>
           <groupId>org.codehaus.gmaven</groupId>
           <artifactId>gmaven-plugin</artifactId>
-          <version>1.3</version>
+          <version>${gmaven.version}</version>
         </plugin>
         <plugin>
           <groupId>org.codehaus.xsite</groupId>
