--- a/web-selenium/pom.xml
+++ b/web-selenium/pom.xml
@@ -13,7 +13,6 @@
   <properties>
     <selenium.version>2.13.0</selenium.version>
     <groovy.version>1.8.4</groovy.version>
-    <gmaven.version>1.3</gmaven.version>
   </properties>
 
   <dependencies>
@@ -70,7 +69,6 @@
       <plugin>
         <groupId>org.codehaus.gmaven</groupId>
         <artifactId>gmaven-plugin</artifactId>
-        <version>${gmaven.version}</version>
         <configuration>
           <source>
             project.addCompileSourceRoot("src/main/groovy")
@@ -123,7 +121,7 @@
                   <pluginExecutionFilter>
                     <groupId>org.codehaus.gmaven</groupId>
                     <artifactId>gmaven-plugin</artifactId>
-                    <versionRange>[${gmaven.version}]</versionRange>
+                    <versionRange>[1.3,)</versionRange>
                     <goals>
                       <goal>generateStubs</goal>
                       <goal>compile</goal>
