JBEHAVE-707:  Start of web archetypes.

--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
     <module>web-resources</module>
     <module>web-selenium</module>
     <module>web-runner</module>
+    <module>archetypes</module>
   </modules>
 
   <properties>
