--- a/web-selenium/pom.xml
+++ b/web-selenium/pom.xml
@@ -11,8 +11,8 @@
   <description>Selenium and WebDriver API bindings for JBehave</description>
 
   <properties>
-    <selenium.version>2.16.1</selenium.version>
-    <groovy.version>1.8.4</groovy.version>
+    <selenium.version>2.17.0</selenium.version>
+    <groovy.version>1.8.5</groovy.version>
   </properties>
 
   <dependencies>
@@ -36,7 +36,7 @@
     <dependency>
       <groupId>com.google.guava</groupId>
       <artifactId>guava</artifactId>
-      <version>r09</version>
+      <version>11.0.1</version>
       <optional>true</optional>
     </dependency>
     <dependency>
