--- a/archetypes/web-selenium-java-spring-archetype/src/main/resources/archetype-resources/pom.xml
+++ b/archetypes/web-selenium-java-spring-archetype/src/main/resources/archetype-resources/pom.xml
@@ -51,7 +51,7 @@
     <dependency>
       <groupId>org.seleniumhq.selenium.fluent</groupId>
       <artifactId>fluent-selenium</artifactId>
-      <version>1.0-beta-4</version>
+      <version>1.0</version>
       <optional>true</optional>
       <exclusions>
         <exclusion>
