JBEHAVE-757: Configuerd use of SameThreadExecutors.

--- a/examples/trader-runner-webdriver/pom.xml
+++ b/examples/trader-runner-webdriver/pom.xml
@@ -106,13 +106,20 @@
               <includes>
                 <include>**/*Stories.java</include>
               </includes>
-              <embedderClass>org.jbehave.web.examples.trader.webdriver.TraderWebStories$SameThreadEmbedder</embedderClass>
+              <executorsClass>org.jbehave.core.embedder.executors.SameThreadExecutors</executorsClass>
             </configuration>
             <goals>
               <goal>run-stories-as-embeddables</goal>
             </goals>
           </execution>
         </executions>
+        <dependencies>
+          <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>11.0.1</version>
+          </dependency>
+        </dependencies>
       </plugin>
     </plugins>
   </build>
