--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
   </modules>
 
   <properties>
-    <jbehave.core.version>3.7-SNAPSHOT</jbehave.core.version>
+    <jbehave.core.version>3.6.1</jbehave.core.version>
     <jbehave.site.version>3.1.1</jbehave.site.version>
     <jbehave.webapp.name>jbehave-web-runner</jbehave.webapp.name>
     <jdk.version>1.5</jdk.version>
