--- a/archetypes/web-selenium-groovy-pico-archetype/src/main/resources/archetype-resources/pom.xml
+++ b/archetypes/web-selenium-groovy-pico-archetype/src/main/resources/archetype-resources/pom.xml
@@ -8,9 +8,9 @@
   <description>JBehave stories verifying functionality of Etsy.com using Groovy and Pico</description>
 
   <properties>
-    <jbehave.core.version>3.7-SNAPSHOT</jbehave.core.version>
-    <jbehave.web.version>3.6-SNAPSHOT</jbehave.web.version>
-    <jbehave.site.version>3.1.1</jbehave.site.version>
+    <jbehave.core.version>$jbehaveCoreVersion</jbehave.core.version>
+    <jbehave.web.version>$jbehaveWebVersion</jbehave.web.version>
+    <jbehave.site.version>$jbehaveSiteVersion</jbehave.site.version>
     <fluent.selenium.version>1.5.1</fluent.selenium.version>
     <selenium.version>2.20.0</selenium.version>
     <gmaven.version>1.3</gmaven.version>
@@ -363,8 +363,8 @@
     <profile>
       <id>stable</id>
       <properties>
-        <jbehave.core.version>3.6.1</jbehave.core.version>
-        <jbehave.web.version>3.5.1</jbehave.web.version>
+        <jbehave.core.version>$jbehaveCoreVersion</jbehave.core.version>
+        <jbehave.web.version>$jbehaveWebVersion</jbehave.web.version>
       </properties>
     </profile>
     <profile>
