--- a/archetypes/web-selenium-groovy-pico-archetype/src/main/resources/archetype-resources/pom.xml
+++ b/archetypes/web-selenium-groovy-pico-archetype/src/main/resources/archetype-resources/pom.xml
@@ -12,7 +12,7 @@
     <jbehave.web.version>$jbehaveWebVersion</jbehave.web.version>
     <jbehave.site.version>$jbehaveSiteVersion</jbehave.site.version>
     <fluent.selenium.version>1.5.1</fluent.selenium.version>
-    <selenium.version>2.20.0</selenium.version>
+    <selenium.version>2.21.0</selenium.version>
     <gmaven.version>1.3</gmaven.version>
     <groovy.version>1.8.6</groovy.version>
     <ignore.failures>true</ignore.failures>
@@ -23,6 +23,11 @@
   </properties>
 
   <dependencies>
+    <dependency>
+      <groupId>org.jbehave</groupId>
+      <artifactId>jbehave-core</artifactId>
+      <version>${jbehave.core.version}</version>
+    </dependency>
     <dependency>
       <groupId>org.jbehave</groupId>
       <artifactId>jbehave-core</artifactId>
@@ -41,6 +46,10 @@
       <artifactId>jbehave-web-selenium</artifactId>
       <version>${jbehave.web.version}</version>
       <exclusions>
+        <exclusion>
+          <groupId>org.jbehave</groupId>
+          <artifactId>jbehave-core</artifactId>
+        </exclusion>
         <exclusion>
           <groupId>org.seleniumhq.selenium</groupId>
           <artifactId>selenium-java</artifactId>
