remove transient dep on oldder version of Selenium from phantomjs

--- a/web-selenium/pom.xml
+++ b/web-selenium/pom.xml
@@ -73,6 +73,17 @@
       <groupId>com.github.detro.ghostdriver</groupId>
       <artifactId>phantomjsdriver</artifactId>
       <version>1.0.4</version>
+      <exclusions>
+        <!-- phantomjsdriver 1.0.4 has a dep on Selenium 2.33 :-(  -->
+        <exclusion>
+          <groupId>org.seleniumhq.selenium</groupId>
+          <artifactId>selenium-remote-driver</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>org.seleniumhq.selenium</groupId>
+          <artifactId>selenium-server</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
   </dependencies>
   <build>
