JBEHAVE-1081:  Updated conf and docs post migration from Codehaus.

--- a/pom.xml
+++ b/pom.xml
@@ -52,7 +52,7 @@
       <artifactId>mockito-all</artifactId>
     </dependency>
     <dependency>
-      <!-- hack to overcome http://jira.codehaus.org/browse/MSITE-228 -->
+      <!-- hack to overcome https://issues.apache.org/jira/browse/MSITE-228 -->
       <groupId>org.apache.maven.skins</groupId>
       <artifactId>maven-default-skin</artifactId>
       <version>1.0</version>
@@ -396,7 +396,7 @@
   <licenses>
     <license>
       <name>BSD license</name>
-      <url>http://git.codehaus.org/gitweb.cgi?p=jbehave-git.git;a=blob_plain;f=LICENSE.txt;hb=HEAD</url>
+      <url>https://github.com/jbehave/jbehave-web/blob/master/LICENSE.txt</url>
       <distribution>repo</distribution>
     </license>
   </licenses>
@@ -405,10 +405,10 @@
   <contributors />
 
   <scm>
-    <connection>scm:git:git://git.codehaus.org/jbehave-web.git</connection>
-    <developerConnection>scm:git:ssh://git@git.codehaus.org/jbehave-web.git</developerConnection>
-    <url>http://git.codehaus.org/gitweb.cgi?p=jbehave-web.git</url>
+    <connection>scm:git:git://github.com/jbehave/jbehave-web.git</connection>
+    <developerConnection>scm:git:ssh://git@github.com/jbehave/jbehave-web.git</developerConnection>
+    <url>http://github.com/jbehave/jbehave-web</url>
     <tag>HEAD</tag>
   </scm>
-
+  
 </project>
