--- a/archetypes/web-selenium-flash-archetype/src/main/resources/archetype-resources/pom.xml
+++ b/archetypes/web-selenium-flash-archetype/src/main/resources/archetype-resources/pom.xml
@@ -58,7 +58,7 @@
     </resources>
     <plugins>
       <plugin>
-        <groupId>org.mortbay.jetty</groupId>
+        <groupId>org.eclipse.jetty</groupId>
         <artifactId>jetty-maven-plugin</artifactId>
         <version>${jetty.version}</version>
         <configuration>
